[DC-1269] Remove references to integration (#1825)
* Remove references to integration

* Fix spotless and remove terraform doc section

* remove unused autowired properties?

* Fix linting

* Add back unused dependencies